[project]
name = "ss13-logtools"
description = "Log parser and analysis tool for /tg/ build of Space Station 13"
version = "0.1"
authors = [
    {name = "antropod", email = "antropod@gmail.com"}
]
dependencies = [
    "sqlalchemy",
    "scrapy",
    "requests",
    "pandas",
    "openpyxl",
]

[build-system]
requires = ["setuptools >= 69.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["logtools", "logtools.parsers", "logtools.models", "logtools.spiders"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--doctest-modules"
testpaths = [
    "logtools",
    "tests",
]